--- a/src/components/styles/Content.css
+++ b/src/components/styles/Content.css
@@ -14,9 +14,9 @@
 
 .inputContainer {
   display: flex;
-  height: 10px;
+  height: auto;
   justify-content: space-evenly;
-  align-items: flex-end;
+  
 }
 
 .inputBox {
