--- a/src/components/styles/Display.css
+++ b/src/components/styles/Display.css
@@ -1,12 +1,9 @@
-.totalContent{
-background-color: darkgoldenrod;
 
-}
 
 .displayQuestion {
     display: flex;
-    flex-direction: row;
-    background-color: rgba(247, 247, 247, 255);
+    /* flex-direction: row; */
+    background-color: aliceblue;
   }
 
   .blackgpt {
@@ -35,17 +32,17 @@ background-color: darkgoldenrod;
   .displayAnswer {
     background-color: rgba(247, 247, 247, 255);
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
   
   
   }
 
   .greengpt {
-    /* background-color: green;
+    
     border-radius: 10px;
     margin-right: 10px;
     height: 38px;
-    width: 38px; */
+    width: 38px;
     height: 46px;
     width: 46px;
     margin-bottom: 10px;
